Make TOC a lot more readable

--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -29,10 +29,11 @@
 \upapertitle{15}{The Seven Superuniverses}{Universal Censor}{p15}
 \upapertitle{16}{The Seven Master Spirits}{Universal Censor}{p16}
 \upapertitle{17}{The Seven Supreme Spirit Groups}{Divine Counsellor}{p17}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{18}{The Supreme Trinity Personalities}{Divine Counsellor}{p18}
 \upapertitle{19}{The Co-ordinate Trinity-Origin Beings}{Divine Counsellor}{p19}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{20}{The Paradise Sons of God}{Perfector of Wisdom}{p20}
 \upapertitle{21}{The Paradise Creator Sons}{Perfector of Wisdom}{p21}
@@ -43,9 +44,9 @@
 \upapertitle{25}{The Messenger Hosts of Space}{One High in Authority}{p25}
 \upapertitle{26}{Ministering Spirits of the Central Universe}{Perfector of Wisdom}{p26}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{27}{Ministry of the Primary Supernaphim}{Perfector of Wisdom}{p27}
 \upapertitle{28}{Ministering Spirits of the Superuniverses}{Mighty Messenger}{p28}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{29}{The Universe Power Directors}{Universal Censor}{p29}
 \upapertitle{30}{Personalities of the Grand Universe}{Mighty Messenger}{p30}
 \upapertitle{31}{The Corps of the Finality}{\parbox[t]{0.3\linewidth}{Divine Counsellor and One Without Name and Number}}{p31}
@@ -55,13 +56,14 @@
 \upapertitle{33}{Administration of the Local Universe}{Chief of Archangels}{p33}
 \upapertitle{34}{The Local Universe Mother Spirit}{Mighty Messenger}{p34}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{35}{The Local Universe Sons of God}{Chief of Archangels}{p35}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{36}{The Life Carriers}{Vorondadek Son}{p36}
 \upapertitle{37}{Personalities of the Local Universe}{Brilliant Evening Star}{p37}
 \upapertitle{38}{Ministering Spirits of the Local Universe}{Melchizedek}{p38}
-\upapertitle{39}{The Seraphic Hosts}{Melchizedek}{p39}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{39}{The Seraphic Hosts}{Melchizedek}{p39}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{40}{The Ascending Sons of God}{Mighty Messenger}{p40}
 \upapertitle{41}{Physical Aspects of the Local Universe}{Archangel}{p41}
 \upapertitle{42}{Energy — Mind and Matter}{Mighty Messenger}{p42}
@@ -71,24 +73,25 @@
 \upapertitle{46}{The Local System Headquarters}{Archangel}{p46}
 \upapertitle{47}{The Seven Mansion Worlds}{Brilliant Evening Star}{p47}
 \upapertitle{48}{The Morontia Life}{Archangel}{p48}
-\upapertitle{49}{The Inhabited Worlds}{Melchizedek}{p49}
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{49}{The Inhabited Worlds}{Melchizedek}{p49}
 \upapertitle{50}{The Planetary Princes}{Secondary Lanonandek}{p50}
 \upapertitle{51}{The Planetary Adams}{Secondary Lanonandek}{p51}
 \upapertitle{52}{Planetary Mortal Epochs}{Mighty Messenger}{p52}
 \upapertitle{53}{The Lucifer Rebellion}{Manovandet Melchizedek}{p53}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{54}{Problems of the Lucifer Rebellion}{Mighty Messenger}{p54}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{55}{The Spheres of Light and Life}{Mighty Messenger}{p55}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{56}{Universal Unity}{\parbox[t]{0.3\linewidth}{Mighty Messenger and Machiventa Melchizedek}}{p56}
 \upartheader{3}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{57}{The Origin of Urantia}{Life Carrier}{p57}
 \upapertitle{58}{Life Establishment on Urantia}{Life Carrier}{p58}
-\upapertitle{59}{The Marine-Life Era on Urantia}{Life Carrier}{p59}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{59}{The Marine-Life Era on Urantia}{Life Carrier}{p59}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{60}{Urantia During the Early Land-Life Era}{Life Carrier}{p60}
 \upapertitle{61}{The Mammalian Era on Urantia}{Life Carrier}{p61}
 \upapertitle{62}{The Dawn Races of Early Man}{Life Carrier}{p62}
@@ -105,25 +108,26 @@
 \upapertitle{72}{Government on a Neighbouring Planet}{Melchizedek}{p72}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{73}{The Garden of Eden}{Solonia}{p73}
-\upapertitle{74}{Adam and Eve}{Solonia}{p74}
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{74}{Adam and Eve}{Solonia}{p74}
 \upapertitle{75}{The Default of Adam and Eve}{Solonia}{p75}
 \upapertitle{76}{The Second Garden}{Solonia}{p76}
 \upapertitle{77}{The Midway Creatures}{Archangel}{p77}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{78}{The Violet Race after the Days of Adam}{Archangel}{p78}
 \upapertitle{79}{Andite Expansion in the Orient}{Archangel}{p79}
 \upapertitle{80}{Andite Expansion in the Occident}{Archangel}{p80}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{81}{Development of Modern Civilization}{Archangel}{p81}
-\upapertitle{82}{The Evolution of Marriage}{Chief of Seraphim}{p82}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{82}{The Evolution of Marriage}{Chief of Seraphim}{p82}
 \upapertitle{83}{The Marriage Institution}{Chief of Seraphim}{p83}
 \upapertitle{84}{Marriage and Family Life}{Chief of Seraphim}{p84}
 \upapertitle{85}{The Origins of Worship}{Brilliant Evening Star}{p85}
 \upapertitle{86}{Early Evolution of Religion}{Brilliant Evening Star}{p86}
 \upapertitle{87}{The Ghost Cults}{Brilliant Evening Star}{p87}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{88}{Fetishes, Charms, and Magic}{Brilliant Evening Star}{p88}
 \upapertitle{89}{Sin, Sacrifice, and Atonement}{Brilliant Evening Star}{p89}
 \upapertitle{90}{Shamanism — Medicine Men and Priests}{Melchizedek}{p90}
@@ -132,6 +136,7 @@
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{93}{Machiventa Melchizedek}{Melchizedek}{p93}
 \upapertitle{94}{The Melchizedek Teachings in the Orient}{Melchizedek}{p94}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{95}{The Melchizedek Teachings in the Levant}{Melchizedek}{p95}
 \upapertitle{96}{Yahweh — God of the Hebrews}{Melchizedek}{p96}
 \fi
@@ -141,45 +146,46 @@
 \upapertitle{97}{Evolution of the God Concept among the Hebrews}{Melchizedek}{p97}
 \upapertitle{98}{The Melchizedek Teachings in the Occident}{Melchizedek}{p98}
 \upapertitle{99}{The Social Problems of Religion}{Melchizedek}{p99}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{100}{Religion in Human Experience}{Melchizedek}{p100}
 \upapertitle{101}{The Real Nature of Religion}{Melchizedek}{p101}
-\upapertitle{102}{The Foundations of Religious Faith}{Melchizedek}{p102}
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{102}{The Foundations of Religious Faith}{Melchizedek}{p102}
 \upapertitle{103}{The Reality of Religious Experience}{Melchizedek}{p103}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{104}{Growth of the Trinity Concept}{Melchizedek}{p104}
-\upapertitle{105}{Deity and Reality}{Melchizedek}{p105}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{105}{Deity and Reality}{Melchizedek}{p105}
 \upapertitle{106}{Universe Levels of Reality}{Melchizedek}{p106}
 \upapertitle{107}{Origin and Nature of Thought Adjusters}{Solitary Messenger}{p107}
 \upapertitle{108}{Mission and Ministry of Thought Adjusters}{Solitary Messenger}{p108}
 \upapertitle{109}{Relation of Adjusters to Universe Creatures}{Solitary Messenger}{p109}
 \upapertitle{110}{Relation of Adjusters to Individual Mortals}{Solitary Messenger}{p110}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{111}{The Adjuster and the Soul}{Solitary Messenger}{p111}
 \upapertitle{112}{Personality Survival}{Solitary Messenger}{p112}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{113}{Seraphic Guardians of Destiny}{Chief of Seraphim}{p113}
 \upapertitle{114}{Seraphic Planetary Government}{Chief of Seraphim}{p114}
 \upapertitle{115}{The Supreme Being}{Mighty Messenger}{p115}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{116}{The Almighty Supreme}{Mighty Messenger}{p116}
 \upapertitle{117}{God the Supreme}{Mighty Messenger}{p117}
 \upapertitle{118}{Supreme and Ultimate — Time and Space}{Mighty Messenger}{p118}
 \upapertitle{119}{The Bestowals of Christ Michael}{Chief of Evening Stars}{p119}
 \upartheader{4}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{120}{The Bestowal of Michael on Urantia}{Mantutia Melchizedek}{p120}
 \upapertitle{121}{The Times of Michael’s Bestowal}{Midwayer Commission}{p121}
 \upapertitle{122}{Birth and Infancy of Jesus}{Midwayer Commission}{p122}
 \upapertitle{123}{The Early Childhood of Jesus}{Midwayer Commission}{p123}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{124}{The Later Childhood of Jesus}{Midwayer Commission}{p124}
-\upapertitle{125}{Jesus at Jerusalem}{Midwayer Commission}{p125}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{125}{Jesus at Jerusalem}{Midwayer Commission}{p125}
 \upapertitle{126}{The Two Crucial Years}{Midwayer Commission}{p126}
+\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{127}{The Adolescent Years}{Midwayer Commission}{p127}
 \ifmultivol\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}\fi
-\tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{128}{Jesus’ Early Manhood}{Midwayer Commission}{p128}
 \ifmultivol\tunemarkup{pgcrownq}{\upartheadercont{3}\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{129}{The Later Adult Life of Jesus}{Midwayer Commission}{p129}
@@ -188,25 +194,26 @@
 \upapertitle{131}{The World’s Religions}{Midwayer Commission}{p131}
 \upapertitle{132}{The Sojourn at Rome}{Midwayer Commission}{p132}
 \upapertitle{133}{The Return from Rome}{Midwayer Commission}{p133}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{134}{The Transition Years}{Midwayer Commission}{p134}
 \upapertitle{135}{John the Baptist}{Midwayer Commission}{p135}
 \upapertitle{136}{Baptism and the Forty Days}{Midwayer Commission}{p136}
 \upapertitle{137}{Tarrying Time in Galilee}{Midwayer Commission}{p137}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{138}{Training the Kingdom’s Messengers}{Midwayer Commission}{p138}
 \upapertitle{139}{The Twelve Apostles}{Midwayer Commission}{p139}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{140}{The Ordination of the Twelve}{Midwayer Commission}{p140}
 \upapertitle{141}{Beginning the Public Work}{Midwayer Commission}{p141}
 \upapertitle{142}{The Passover at Jerusalem}{Midwayer Commission}{p142}
 \upapertitle{143}{Going Through Samaria}{Midwayer Commission}{p143}
 \upapertitle{144}{At Gilboa and in the Decapolis}{Midwayer Commission}{p144}
 \upapertitle{145}{Four Eventful Days at Capernaum}{Midwayer Commission}{p145}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{146}{First Preaching Tour of Galilee}{Midwayer Commission}{p146}
 \upapertitle{147}{The Interlude Visit to Jerusalem}{Midwayer Commission}{p147}
-\upapertitle{148}{Training Evangelists at Bethsaida}{Midwayer Commission}{p148}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{148}{Training Evangelists at Bethsaida}{Midwayer Commission}{p148}
 \upapertitle{149}{The Second Preaching Tour}{Midwayer Commission}{p149}
 \upapertitle{150}{The Third Preaching Tour}{Midwayer Commission}{p150}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
@@ -214,15 +221,15 @@
 \upapertitle{152}{Events Leading up to the Capernaum Crisis}{Midwayer Commission}{p152}
 \upapertitle{153}{The Crisis at Capernaum}{Midwayer Commission}{p153}
 \upapertitle{154}{Last Days at Capernaum}{Midwayer Commission}{p154}
-\upapertitle{155}{Fleeing Through Northern Galilee}{Midwayer Commission}{p155}
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{155}{Fleeing Through Northern Galilee}{Midwayer Commission}{p155}
 \upapertitle{156}{The Sojourn at Tyre and Sidon}{Midwayer Commission}{p156}
 \upapertitle{157}{At Caesarea-Philippi}{Midwayer Commission}{p157}
 \upapertitle{158}{The Mount of Transfiguration}{Midwayer Commission}{p158}
 \upapertitle{159}{The Decapolis Tour}{Midwayer Commission}{p159}
 \upapertitle{160}{Rodan of Alexandria}{Midwayer Commission}{p160}
 \upapertitle{161}{Further Discussions with Rodan}{Midwayer Commission}{p161}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{162}{At the Feast of Tabernacles}{Midwayer Commission}{p162}
 \ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{163}{Ordination of the Seventy at Magadan}{Midwayer Commission}{p163}
@@ -231,41 +238,43 @@
 \upapertitle{165}{The Perean Mission Begins}{Midwayer Commission}{p165}
 \upapertitle{166}{Last Visit to Northern Perea}{Midwayer Commission}{p166}
 \upapertitle{167}{The Visit to Philadelphia}{Midwayer Commission}{p167}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{168}{The Resurrection of Lazarus}{Midwayer Commission}{p168}
 \upapertitle{169}{Last Teaching at Pella}{Midwayer Commission}{p169}
 \upapertitle{170}{The Kingdom of Heaven}{Midwayer Commission}{p170}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
-\upapertitle{171}{On the Way to Jerusalem}{Midwayer Commission}{p171}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{171}{On the Way to Jerusalem}{Midwayer Commission}{p171}
 \upapertitle{172}{Going into Jerusalem}{Midwayer Commission}{p172}
 \upapertitle{173}{Monday in Jerusalem}{Midwayer Commission}{p173}
 \upapertitle{174}{Tuesday Morning in the Temple}{Midwayer Commission}{p174}
 \upapertitle{175}{The Last Temple Discourse}{Midwayer Commission}{p175}
+\tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{176}{Tuesday Evening on Mount Olivet}{Midwayer Commission}{p176}
 \upapertitle{177}{Wednesday, the Rest Day}{Midwayer Commission}{p177}
 \upapertitle{178}{Last Day at the Camp}{Midwayer Commission}{p178}
 \upapertitle{179}{The Last Supper}{Midwayer Commission}{p179}
 \upapertitle{180}{The Farewell Discourse}{Midwayer Commission}{p180}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{181}{Final Admonitions and Warnings}{Midwayer Commission}{p181}
 \upapertitle{182}{In Gethsemane}{Midwayer Commission}{p182}
-\upapertitle{183}{The Betrayal and Arrest of Jesus}{Midwayer Commission}{p183}
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{183}{The Betrayal and Arrest of Jesus}{Midwayer Commission}{p183}
 \upapertitle{184}{Before the Sanhedrin Court}{Midwayer Commission}{p184}
 \upapertitle{185}{The Trial Before Pilate}{Midwayer Commission}{p185}
 \upapertitle{186}{Just Before the Crucifixion}{Midwayer Commission}{p186}
 \upapertitle{187}{The Crucifixion}{Midwayer Commission}{p187}
 \upapertitle{188}{The Time of the Tomb}{Midwayer Commission}{p188}
 \upapertitle{189}{The Resurrection}{Midwayer Commission}{p189}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{190}{Morontia Appearances of Jesus}{Midwayer Commission}{p190}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{191}{Appearances to the Apostles and Other Leaders}{Midwayer Commission}{p191}
 \upapertitle{192}{Appearances in Galilee}{Midwayer Commission}{p192}
 \upapertitle{193}{Final Appearances and Ascension}{Midwayer Commission}{p193}
-\upapertitle{194}{Bestowal of the Spirit of Truth}{Midwayer Commission}{p194}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{194}{Bestowal of the Spirit of Truth}{Midwayer Commission}{p194}
 \upapertitle{195}{After Pentecost}{Midwayer Commission}{p195}
 \upapertitle{196}{The Faith of Jesus}{Midwayer Commission}{p196}
 \fi
