Update to one of the questions in the CSQ.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -22,10 +22,10 @@
 {Armenian}{0}
 {Russian}{0}
 {English}{1}
-{French}{0}
 {German}{0}
 {Italian}{0}
 {Mandarin}{0}
+{Nuumte Oote}{0}
 \qstop
 
 \qstart{Where do all personal beings derive their personality from?}
