--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -28,6 +28,7 @@
 
 % various font families
 %\tunemarkuptag{basker}
+%\tunemarkuptag{baskerthin}
 \tunemarkuptag{garamond}
 
 % comment out for NO page break BEFORE Part title
@@ -77,6 +78,14 @@
 \def\greekfontname{SBL Greek}
 \def\armenianfontname{ArTarumianGrqiBardzr_U}
 \def\chinesefontname{Code2000}
+
+\tunemarkup{baskerthin}{%
+\def\urantiamdheadingfont{Baskerville 120 Pro}
+\def\urantiaheadingfont{Baskerville 120 Pro}
+\def\urantiamainfont{Baskerville 120 Pro}
+\def\urantiaauthorfont{Baskerville 120 Pro}
+\def\urantiatitlefont{Baskerville 120 Pro}
+}
 
 \tunemarkup{basker}{%
 \def\urantiamdheadingfont{Baskerville 10 Pro}
@@ -796,6 +805,7 @@
 \newcommand{\offontsize}{\fontsize{12}{20}\selectfont}
 \newcommand{\subsubtitlefontsize}{\fontsize{12}{14}\itshape}
 \newcommand{\infofontsize}{\fontsize{9}{11}\itshape}
+\def\pc{{\fontsize{9}{9}\selectfont§§}\kern2pt}
 \renewcommand{\uminitoc}[1]{%
    \stepcounter{uminitocnum}%
    {\minitocfontsize\makebox[0.08\linewidth][r]{\theuminitocnum.\,}\makebox[0.85\linewidth][l]{\uppercase{#1}\bibdf}\makebox[0.06\linewidth][r]{\bibpr{p\thepaper_\theuminitocnum}}\\[-1.2ex]}%
@@ -804,13 +814,13 @@
 \tolerance=3000
 \renewcommand{\numw}{0.07\linewidth}
 \renewcommand{\txtw}{0.85\linewidth}
-\renewcommand{\bibheadfont}{\headingfont\fontsize{8}{8}\selectfont}
-\newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
+\renewcommand{\bibheadfont}{\headingfont\fontsize{9}{9}\bfseries}
+\newcommand{\bibheadpapersize}{\fontsize{9}{9}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\titlefont\large\selectfont}
-\newcommand{\bibpapertitlefont}{\titlefont\Large\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\normalsize\bfseries}
+\newcommand{\bibpapertitlefont}{\titlefont\large\bfseries}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
@@ -822,11 +832,11 @@
 \newcommand{\bibtocsuperheadfont}{\fontsize{17}{17}\selectfont}
 \renewcommand{\bibtocheadfont}{\fontsize{12}{12}\mdseries}
 \renewcommand{\bibtocfont}{\fontsize{8.6}{15}\selectfont}
-\newcommand{\minitocfontsize}{\headingfont\fontsize{9.0}{9.0}\selectfont}
-\renewcommand{\footnotesize}{\fontsize{15}{17}\selectfont}
-\newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
-\newcommand{\urantiamainfontsize}{18/20}
-\newcommand{\authorfont}{\authorfontfamily\fontsize{25}{9}\bfseries\itshape}%
+\newcommand{\minitocfontsize}{\headingfont\fontsize{8.2}{8.2}\selectfont}
+\renewcommand{\footnotesize}{\fontsize{13}{15}\selectfont}
+\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{15/19}
+\newcommand{\authorfont}{\authorfontfamily\fontsize{13}{13}\bfseries\itshape}%
 \newcommand{\introfontsize}{\bibbookend}
 }
 
