Remove unnecessary physical markup

--- a/tex/p034.tex
+++ b/tex/p034.tex
@@ -69,7 +69,7 @@
 \vs p034 6:13 The consciousness of the spirit domination of a human life is presently attended by an increasing exhibition of the characteristics of the Spirit in the life reactions of such a spirit\hyp{}led mortal, “for the fruits of the spirit are love, joy, peace, long\hyp{}suffering, gentleness, goodness, faith, meekness, and temperance.” Such spirit\hyp{}guided and divinely illuminated mortals, while they yet tread the lowly paths of toil and in human faithfulness perform the duties of their earthly assignments, have already begun to discern the lights of eternal life as they glimmer on the faraway shores of another world; already have they begun to comprehend the reality of that inspiring and comforting truth, “The kingdom of God is not meat and drink but righteousness, peace, and joy in the Holy Spirit.” And throughout every trial and in the presence of every hardship, spirit\hyp{}born souls are sustained by that hope which transcends all fear because the love of God is shed abroad in all hearts by the presence of the divine Spirit.
 \usection{The Spirit and the Flesh}
 \vs p034 7:1 The flesh, the inherent nature derived from the animal\hyp{}origin races, does not naturally bear the fruits of the divine Spirit. When the mortal nature has been upstepped by the addition of the nature of the Material Sons of God, as the Urantia races were in a measure advanced by the bestowal of Adam, then is the way better prepared for the Spirit of Truth to co\hyp{}operate with the indwelling Adjuster to bring forth the beautiful harvest of the character fruits of the spirit. If you do not reject this spirit, even though eternity may be required to fulfil the commission, “he will guide you into all truth.”
-\vs p034 7:2 Evolutionary mortals inhabiting normal\tunemarkup{pgauraone}{\linebreak} worlds of spiritual progress do not experience the acute conflicts between the spirit and the flesh which characterize the present\hyp{}day Urantia races. But even on the most ideal planets, pre\hyp{}Adamic man must put forth positive efforts to ascend from the purely animalistic plane of existence up through successive levels of increasingly intellectual meanings and higher spiritual values.
+\vs p034 7:2 Evolutionary mortals inhabiting normal worlds of spiritual progress do not experience the acute conflicts between the spirit and the flesh which characterize the present\hyp{}day Urantia races. But even on the most ideal planets, pre\hyp{}Adamic man must put forth positive efforts to ascend from the purely animalistic plane of existence up through successive levels of increasingly intellectual meanings and higher spiritual values.
 \vs p034 7:3 The mortals of a normal world do not experience constant warfare between their physical and spiritual natures. They are confronted with the necessity of climbing up from the animal levels of existence to the higher planes of spiritual living, but this ascent is more like undergoing an educational training when compared with the intense conflicts of Urantia mortals in this realm of the divergent material and spiritual natures.
 \vs p034 7:4 \pc The Urantia peoples are suffering the consequences of a double deprivation of help in this task of progressive planetary spiritual attainment. The Caligastia upheaval precipitated world\hyp{}wide confusion and robbed all subsequent generations of the moral assistance which a well\hyp{}ordered society would have provided. But even more disastrous was the Adamic default in that it deprived the races of that superior type of physical nature which would have been more consonant with spiritual aspirations.
 \vs p034 7:5 Urantia mortals are compelled to undergo such marked struggling between the spirit and the flesh because their remote ancestors were not more fully Adamized by the Edenic bestowal. It was the divine plan that the mortal races of Urantia should have had physical natures more naturally spirit responsive.
